작성중인 코드 타장소에서 사용토록 일단 커밋

--- a/grunt/config.json
+++ b/grunt/config.json
@@ -1,6 +1,17 @@
 {
-  "css": {
-    "src": "src/less/style.less",
-    "dest": "dest/css/style.css"
-  }
+	"less": {
+		"src": "src/less/*.less",
+		"dest": "dest/css/*.css"
+	},
+	"sass": {
+		"expand": "true",
+		"cwd": "src/sass",
+		"src": "['*.scss','*.sass']",
+		"dest": "dest/css",
+		"ext": ".css"
+	},
+	"css": {
+		"src": "src/css/*.css",
+		"dest": "dest/css/*.css"
+	}
 }
