--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/demun/grunt-start#readme",
   "devDependencies": {
+    "autoprefixer": "^6.0.3",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-clean": "^0.6.0",
@@ -32,10 +33,14 @@
     "grunt-csscomb": "^3.1.0",
     "grunt-htmlhint": "^0.4.1",
     "grunt-includes": "^0.5.1",
+    "grunt-postcss": "^0.6.0",
     "grunt-rename": "^0.1.4",
+    "grunt-sass": "^1.0.0",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^2.0.1",
     "load-grunt-tasks": "^3.2.0",
+    "postcss-scss": "^0.1.2",
+    "precss": "^1.2.3",
     "time-grunt": "^1.2.1"
   }
 }
