--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
     "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-csslint": "^0.5.0",
     "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-csscomb": "^3.1.0",
     "grunt-htmlhint": "^0.4.1",
     "grunt-includes": "^0.5.1",
+    "grunt-newer": "^1.1.1",
     "grunt-postcss": "^0.6.0",
     "grunt-rename": "^0.1.4",
     "grunt-sass": "^1.0.0",
