--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "autoprefixer": "^6.0.3",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
+    "grunt-babel": "^6.0.0",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-csslint": "^0.5.0",
@@ -34,6 +36,8 @@
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-csscomb": "^3.1.0",
+    "grunt-cssnext": "^1.0.0",
+    "grunt-eslint": "^17.3.1",
     "grunt-htmlhint": "^0.4.1",
     "grunt-includes": "^0.5.1",
     "grunt-newer": "^1.1.1",
